--- a/.config/sway/config
+++ b/.config/sway/config
@@ -159,6 +159,7 @@ exec --no-startup-id udiskie
 exec --no-startup-id 'persway -a'
 exec --no-startup-id 'mako --default-timeout 1500'
 exec --no-startup-id nextcloud
+exec --no-startup-id opensnitch-ui
 
 bindsym $mod+shift+q kill
 input * xkb_layout eu
