--- a/.config/sway/config
+++ b/.config/sway/config
@@ -165,14 +165,16 @@ exec --no-startup-id udiskie
 exec --no-startup-id 'persway -a'
 exec --no-startup-id 'mako --default-timeout 1500'
 exec --no-startup-id nextcloud
-exec --no-startup-id opensnitch-ui
+
+# enable xdg-desktop-portal-wlr (screensharing)
+exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
 
 bindsym $mod+shift+q kill
 input * xkb_layout eu
 input * xkb_options caps:escape
 
-output DP-3 pos 0 738 res 2560x1440
-output DP-2 pos 2560 0 res 2560x1440 transform 270
-workspace 1 output DP-3
-workspace 2 output DP-2
-focus output DP-3
+output DP-2 pos 0 0 res 2560x1440
+output DP-1 pos 2560 0 res 2560x1440 transform 270
+workspace 1 output DP-2
+workspace 2 output DP-1
+focus output DP-2
